<resources>
    <string name="app_name">Getit</string>
    <string name="Name">Name</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Login">Login</string>
    <string name="Designation">Designation</string>
    <string name="Enter">Enter your name here</string>
    <string name="EnterPh">Enter 10 Digit PhNumber</string>
    <string name="People">Add People</string>
    <string name="addpeople">Add People</string>
    <string name="createnote">Create Notice</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Inbox">Inbox</string>
    <string name="Faculty">Faculty</string>
    <string name="student">Student</string>
    <string name="Email">Email</string>
    <string name="EnterEmail">Enter email</string>
    <string name="Department">Department</string>
    <string name="Add">Add</string>
    <string name="semester">Semester</string>
    <string name="USN">USN</string>
    <string name="EnterPassword">Enter Correct Password</string>
    <string name="Password">Password</string>
    <string name="Logout">Logout</string>
    <string name="EnterUsn">Enter your USN</string>
    <string name="section">section</string>
    <string name="ApplyChanges">Apply</string>
    <string name="Profile">Profile</string>
    <string name="title">TITLE</string>
    <string name="content">CONTENT</string>
    <string name="EnterContent">Enter the content</string>
    <string name="sender">SENDER</string>
    <string name="senderDesignation">SENDER DESIGNATION</string>
    <string name="type">TYPE</string>
    <string name="receiver">RECEIVER</string>
    <string name="EnterTitle">Enter the title of notice</string>
    <string name="SenderEmail">SENDER EMAIL</string>

    <string-array name="logindesignation">
        <item>principal</item>
        <item>faculty</item>
        <item>student</item>
    </string-array>

    <string-array name="facultydesignation">
        <item>COE</item>
        <item>Administrative Dept</item>
        <item>Dean</item>
        <item>HOD</item>
        <item>Associate Professor</item>
        <item>Assistant Professor</item>
    </string-array>

    <string-array name="depts">
        <item>Computer Science</item>
        <item>Civil</item>
        <item>Information Science</item>
        <item>Electronics and Commmunication</item>
        <item>Mechanical</item>
        <item>Electrical</item>
        <item>Telecommunication</item>
        <item>Medical Electronics</item>
        <item>Instrumentation</item>
        <item>IEM</item>
        <item>All</item>
    </string-array>

    <string-array name="sectionAdd">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="semester">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>ALL</item>
    </string-array>

    <string-array name="Noticetype">
        <item>All</item>
        <item>Individual</item>
    </string-array>
    <string-array name="receiver">
        <item>All</item>
    </string-array>
    <string-array name="section">
        <item>All</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string name="title_activity_notice_tab">NoticeTabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_student_notice_tab">StudentNoticeTabActivity</string>
    <string name="title_activity_student_inbox">StudentInboxActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="datetime">Date Time</string>
    <string name="studentNotice">Notices</string>
    <string name="title_activity_faculty_inbox">FacultyInboxActivity</string>
    <string name="title_activity_sent_by">SentByActivity</string>
    <string name="title_activity_sent_notices">SentNoticesActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="SentNotices">Sent Notices</string>
    <string name="Home">Home</string>
    <string name="newpass">New Password</string>
    <string name="newpassconfirm">Confirm New Password</string>
    <string name="reEnter">Re-enter New password</string>
    <string name="update">Update</string>
    <string name="changePass">Change Password</string>


</resources>
