<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.chandan.projectfinal.AddStudentActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        <EditText
            android:id="@+id/name"
            android:maxLength="30"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/USN"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        <EditText
            android:id="@+id/usn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EnterUsn"
            android:maxLength="10"
            android:layout_marginBottom="16dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PhoneNumber"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <EditText
            android:id="@+id/phonenumber"
            android:inputType="phone"
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EnterPh"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EnterEmail"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Department"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        <Spinner
            android:id="@+id/department"
            android:entries="@array/depts"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="16dp">
        </Spinner>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semester"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        <Spinner
            android:id="@+id/semester"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:entries="@array/semester">
        </Spinner>

        <Button
            android:id="@+id/Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Add"
            android:background="@color/colorPrimary"
            android:textAppearance="@android:style/TextAppearance.Holo.Large" />

    </LinearLayout>
</ScrollView>