<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.chandan.projectfinal.AddFacultyActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        <EditText
            android:id="@+id/title"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EnterTitle"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <EditText
            android:id="@+id/content"
            android:maxLength="1500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EnterContent"
            android:gravity="start"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senderDesignation"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <EditText
            android:id="@+id/sender"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SenderEmail"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <EditText
            android:id="@+id/email"
            android:maxLength="30"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:layout_marginBottom="16dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <Spinner
            android:id="@+id/type"
            android:entries="@array/Noticetype"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="16dp">
        </Spinner>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiver"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <Spinner
            android:id="@+id/receiver"
            android:entries="@array/receiver"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="16dp">
        </Spinner>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Department"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        <Spinner
            android:id="@+id/department"
            android:entries="@array/depts"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="16dp">
        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semester"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        <Spinner
            android:id="@+id/semester"
            android:entries="@array/semester"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="16dp">
        </Spinner>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <Spinner
            android:id="@+id/section"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:entries="@array/section">
        </Spinner>

        <Button
            android:id="@+id/Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Add"
            android:background="@color/colorPrimary"
            android:textAppearance="@android:style/TextAppearance.Holo.Large" />


    </LinearLayout>
</ScrollView>