<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="8"
    android:columnCount="6"
    tools:context="com.example.chandan.projectfinal.FacultyActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Faculty"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_columnSpan="3"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/People"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/People"
        android:drawableTop="@drawable/people"
        android:text="@string/addpeople"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_rowSpan="2"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"/>

    <Button
        android:id="@+id/Notifiy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:drawableTop="@drawable/createnote"
        android:text="@string/createnote"
        android:layout_row="3"
        android:layout_column="4"
        android:layout_columnSpan="2"
        android:layout_rowSpan="2"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"/>
    <Button
        android:id="@+id/Inbox"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:drawableTop="@drawable/inbox"
        android:text="@string/Inbox"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_rowSpan="2"
        android:layout_marginLeft="30dp"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:drawableTop="@drawable/settings"
        android:text="@string/settings"
        android:layout_marginBottom="50dp"
        android:layout_row="6"
        android:layout_column="4"
        android:layout_columnSpan="2"
        android:layout_rowSpan="2"
        android:layout_marginRight="30dp"/>



</GridLayout>
