<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chandan.projectfinal.PrincipalActivity">

    <Button
        android:id="@+id/Inbox"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:drawableTop="@drawable/inbox"
        android:contentDescription="@string/settings"
        android:text="@string/Inbox"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:drawableTop="@drawable/inbox"
        android:text="@string/Profile"
        android:layout_marginRight="100dp"
        android:layout_marginEnd="100dp"
        android:layout_below="@+id/Inbox"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
