<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chandan.projectfinal.PrincipalActivity">

    <Button
        android:id="@+id/People"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:drawableTop="@drawable/people"
        android:contentDescription="@string/People"
        android:text="@string/addpeople"
        android:layout_marginTop="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/Notifiy"
        android:layout_alignStart="@+id/Notifiy" />

    <Button
        android:id="@+id/Notifiy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:drawableTop="@drawable/createnote"
        android:text="@string/createnote"
        android:layout_marginRight="100dp"
        android:layout_marginEnd="100dp"
        android:layout_below="@+id/People"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp" />

</RelativeLayout>
