<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context="com.example.chandan.projectfinal.UpdatePasswordActivity">


            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newpass"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />


            <EditText
                android:id="@+id/newpass"
                android:maxLength="30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newpass"
                android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newpassconfirm"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />


        <EditText
            android:id="@+id/newpassconfirm"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reEnter"
            android:layout_marginBottom="30dp"/>






        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update"
            android:background="@color/colorPrimary"
            android:textAppearance="@android:style/TextAppearance.Holo.Large" />


    </LinearLayout>
</ScrollView>